syntax = "proto3";

package boutiqueshop;

import "google/api/annotations.proto";
import "shared/shared.proto";

option go_package = "github.com/panupakm/boutique-go/api/user;user";
option java_multiple_files = true;
option java_package = "api.user";

service User {
    rpc GetUser(GetUserReq) returns (GetUserReply) {
		option (google.api.http) = {
			get: "/user/{id}"
		};
    }

    rpc GetUserByUsername(GetUserByUsernameReq) returns (GetUserByUsernameReply) {
		option (google.api.http) = {
			get: "/user/{username}"
		};
    }

    rpc Save(SaveUserReq) returns (SaveUserReply) {
		option (google.api.http) = {
			put: "/user"
			body: "*"
		};
    }

    rpc CreateUser(CreateUserReq) returns (CreateUserReply) {
		option (google.api.http) = {
			post: "/user"
			body: "*"
		};
    }

    rpc VerifyPassword(VerifyPasswordReq) returns (VerifyPasswordReply) {
		option (google.api.http) = {	
			post: "/user/verify"
			body: "*"
		};
	}
}

message GetUserReq {
    string id = 1;
}

message GetUserReply {
    string id = 1;
    string username = 2;
}

message GetUserByUsernameReq {
    string username = 1;
}

message GetUserByUsernameReply {
    string id = 1;
    string username = 2;
}

message CreateUserReq {
    string username = 1;
    string password = 2;
}

message CreateUserReply {
    string id = 1;
    string username = 2;
}

message VerifyPasswordReq {
    string username = 1;
    string password = 2;
}

message VerifyPasswordReply {
    bool ok = 1;
    int64 id = 2;
}



message DeleteCardReq {
    int64 uid = 1;
}

message DeleteCardReply {
    bool ok = 1;
}

message SaveUserReq {
    int64 id = 1;
    string username = 2;
    string password = 3;
}

message SaveUserReply {
    int64 id = 1;
}

